created pug base

--- a/views/base.pug
+++ b/views/base.pug
@@ -1,8 +1,10 @@
 doctype html
 html
     head
-        link(rel='stylesheet', href='/css/style.css')
+        title Natours
+        link(rel='stylesheet' href='/css/style.css')
+        link(rel= 'shortcut icon' type = 'image/png' href='/img/favicon.png')
     body
        main 
-        h1 The park Camper 
+        h1= name 
         p Sample text with pug...
