made some documentation

--- a/views/base.pug
+++ b/views/base.pug
@@ -8,7 +8,9 @@ html
         // Header
         include _header
       
+        // Content
         main.main 
             h1= tour     
 
+        // Footer
         include _footer
