--- a/views/_header.pug
+++ b/views/_header.pug
@@ -9,9 +9,9 @@ header.header
     .header__logo
         img(src="/img/logo-white.png" alt="Natours logo")
     nav.nav.nav--user
-        a.nav__el(href="#") My bookings
-        a.nav__el(href="#")
-            img.nav__user-img(src="/img/users/user-1.jpg" alt="User photo")
-            span Jonas
+        //- a.nav__el(href="#") My bookings
+        //- a.nav__el(href="#")
+        //-     img.nav__user-img(src="/img/users/user-1.jpg" alt="User photo")
+        //-     span Jonas
         button.nav__el Log in
         button.nav__el.nav__el--cta Sign up
