--- a/views/base.pug
+++ b/views/base.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        //- Pug uses # instead of `` 
         title Natours | #{title}
         link(rel='stylesheet' href='/css/style.css')
         link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
